<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/number_display"
            style="@style/textview_style"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/button_default_alt"
            android:gravity="right|center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/clear_entry_button"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/clear_entry_button_selector"
                android:onClick="clickHandler"
                android:text="@string/ce" />

            <Button
                android:id="@+id/clear_button"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/clear_entry_button_selector"
                android:onClick="clickHandler"
                android:text="@string/clear" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/seven" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/eight" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/nine" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/devide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/four" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/five" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/six" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/one" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/two" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/three" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/decimal_point" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/zero" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="clickHandler"
                android:text="@string/plus" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/equal_button_selector"
                android:onClick="clickHandler"
                android:text="@string/equal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="aboutHandler"
                android:text="@string/about" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="rateHandler"
                android:text="@string/rate" />

            <Button
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="shareHandler"
                android:text="@string/share" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>